remove/cmt out logs && update responsiveness 1440px+

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sample",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hwanderlust.github.io/sparta-party/",
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -11,7 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -24,6 +26,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0"
   }
 }
